// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInvoke Wrapped Component renders the wrapped component adn forward props 1`] = `
<DummyWithFetchDataComponent
  invoke={[Function]}
  loading={false}
  sommething="ok"
/>
`;

exports[`withInvoke invoke behaviours forwards data when failure 1`] = `
<div>
  Error: 
  data error
</div>
`;

exports[`withInvoke invoke behaviours forwards data when success 1`] = `
<div>
  Some data passed: 
  Sponge bob is alive
</div>
`;

exports[`withInvoke invoke behaviours forwards loading on invoke 1`] = `
<div>
  Loading
</div>
`;
